virt01/automated/tools/stryx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strix-service
  namespace: camera
spec:
  selector:
    app: strix
  ports:
    - protocol: TCP
      port: 4567
      targetPort: 4567
