virt01/automated/tools/stryx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strix-ingress
  namespace: tools
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: strix.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: strix-service
            port:
              number: 4567
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - strix.k3s.nf.lab
    secretName: strix-tls
